adding web nav permissions

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,8 @@
         ]
     },
     "permissions": [
-        "tabs", 
+        "tabs",
+        "webNavigation",
         "http://*/*",
         "https://*/*"
     ],
